--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ li {
 h1 {
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: aliceblue;
+    color: rgb(3, 68, 117);
 }
 
 p {
